# old.rehearse20-trx

./: .gitignore  CMakeLists.txt  defaults.h  device.h  payload_type_opus.h  runvcpkgbootstrap.js  rx.c  rx.cpp  rx_alsalib.c  rx_alsalib.h  rx_rtplib.c  rx_rtplib.cpp  rx_rtplib.h  sched.h  trx.cpp  trx_rtplib.c  trx_rtplib.cpp  trx_rtplib.h  tx.c  tx.cpp  tx_alsalib.c  tx_alsalib.h  tx_rtplib.c  tx_rtplib.cpp  tx_rtplib.h  vcpkg_x64-linux.txt  vcpkg_x64-osx.txt  vcpkg_x64-windows.txt
.github/workflows/: build.yml
vcpkg-ports/bctoolbox/: CONTROL  portfile.cmake
vcpkg-ports/ortp/: CONTROL  fix-include.patch  portfile.cmake
